Fixed z-index issue on autocomplete dropdown

--- a/src/sass/components/ATATAutoComplete.scss
+++ b/src/sass/components/ATATAutoComplete.scss
@@ -1,3 +1,26 @@
+.v-autocomplete__content {
+  position: absolute;
+  z-index: 100000;
+  min-height: 300px;
+  max-width: 416px !important;   
+
+    &.v-menu__content {
+    box-shadow: 0px 4px 10px rgba(194, 194, 194, 0.5);
+    border-radius: 8px;
+    .v-list-item--active {
+      &:before {
+        opacity: 0;
+      }
+      background-color: $primary-lighter !important;
+      color: $base-darkest !important;
+      .v-list-item-title {
+        font-weight: 700 !important;
+      }
+    }
+  }
+}
+
+
 .v-autocomplete {
   &.v-select {
     &.v-select--is-menu-active {
@@ -14,20 +37,7 @@
     }
   }
 
-  .v-autocomplete__content.v-menu__content {
-    box-shadow: 0px 4px 10px rgba(194, 194, 194, 0.5);
-    border-radius: 8px;
-    .v-list-item--active {
-      &:before {
-        opacity: 0;
-      }
-      background-color: $primary-lighter !important;
-      color: $base-darkest !important;
-      .v-list-item-title {
-        font-weight: 700 !important;
-      }
-    }
-  }
+  
   
   .v-select__slot {
     input {
